--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -47,7 +47,7 @@
   "im_flexible": "我可以接受不同日期",
   "hotel_residence": "酒店式住宅",
   "seamless_living": "无缝生活，让酒店成为您的永久家园！",
-  "saveloka_recommended": "Saveloka 推荐单位",
+  "saveloka_recommended": "Tobe House 推荐单位",
   "stay_monthly": "以更低的价格住一个月 🤑",
   "disc_upto": "折扣高达",
   "see_all": "查看全部",
@@ -55,8 +55,8 @@
   "find_best": "寻找最佳住宿单位 🌴",
   "thematic_instagram": "主题和 Instagram 适用的单位！✨",
   "stay_with": "留在一个新的氛围里！",
-  "saveloka_premium": "Saveloka 高级",
-  "selected_premium": "由 Saveloka 提供 5 星级服务的精选高级单位",
+  "saveloka_premium": "Tobe House 高级",
+  "selected_premium": "由 Tobe House 提供 5 星级服务的精选高级单位",
   "find_appartment": "找到符合您预算的公寓！💳",
   "price_below": "以下价格为月租价格",
   "lowest": "最低",
@@ -70,7 +70,7 @@
   "best_selling": "最畅销的公寓大楼 🏆",
   "recommend_apartments": "推荐公寓 🏬",
   "looking_for_a_place": "正在寻找住所？🏠",
-  "find_by_saveloka": "在印度尼西亚大城市中找“由 Saveloka 提供”的单位",
+  "find_by_saveloka": "在印度尼西亚大城市中找“由 Tobe House 提供”的单位",
   "new": "新",
   "discussion": "讨论",
   "introduction": "介绍",
@@ -218,7 +218,7 @@
   "contact_info": "联系信息",
   "real_estate_images": "房地产图片",
   "update_image_to_maximum": "最多更新两张图片",
-  "do_you_agree": "您是否同意 Saveloka 的条款和政策？",
+  "do_you_agree": "您是否同意 Tobe House 的条款和政策？",
   "add_room": "添加房间",
   "room_title": "房间标题",
   "enter_room_type": "输入房间类型标题",
@@ -245,7 +245,7 @@
   "enter_username_email": "输入您的用户名或邮箱",
   "for_sale": "待售",
   "register_partner": "注册合作伙伴",
-  "become_shome_partner": "成为 Saveloka 合作伙伴",
+  "become_shome_partner": "成为 Tobe House 合作伙伴",
   "real_estate_type": "房地产类型",
   "general_information": "通用信息",
   "estate_detail": "房产详情",
