--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -44,7 +44,7 @@
   "im_flexible": "I am flexible with dates",
   "hotel_residence": "Hotel residence",
   "seamless_living": "Seamless Living, Make Hotel Your Permanent Home!",
-  "saveloka_recommended": "Saveloka recommended units",
+  "saveloka_recommended": "Tobe House recommended units",
   "stay_monthly": "Stay monthly for cheaper prices 🤑",
   "disc_upto": "Disc. up to",
   "see_all": "See all",
@@ -52,8 +52,8 @@
   "find_best": "Find best units for staycation 🌴",
   "thematic_instagram": "Thematic and Instagramable Unit!✨",
   "stay_with": "Stay with a New Atmosphere!",
-  "saveloka_premium": "Saveloka premium",
-  "selected_premium": "Selected premium unit with 5 star service by Saveloka",
+  "saveloka_premium": "Tobe House premium",
+  "selected_premium": "Selected premium unit with 5 star service by Tobe House",
   "find_appartment": "Find apartment that fits your budget! 💳",
   "price_below": "Price below is Monthly price",
   "lowest": "Lowest",
@@ -67,7 +67,7 @@
   "best_selling": "Best selling apartment buildings 🏆",
   "recommend_apartments": "Recommended Apartments 🏬",
   "looking_for_a_place": "Looking for a place to stay? 🏠",
-  "find_by_saveloka": "Find “By Saveloka” units in Indonesia’s big cities",
+  "find_by_saveloka": "Find “By Tobe House” units in Indonesia’s big cities",
   "new": "NEW",
   "discussion": "Discussion",
   "introduction": "Introduction",
@@ -219,7 +219,7 @@
   "contact_info": "Contact info",
   "real_estate_images": "Real estate images",
   "update_image_to_maximum": "Update images to a maximum of two images",
-  "do_you_agree": "Do you agree with the terms and policy of Saveloka?",
+  "do_you_agree": "Do you agree with the terms and policy of Tobe House?",
   "add_room": "Add room",
   "room_title": "Room title",
   "enter_room_type": "Enter room type title",
@@ -250,7 +250,7 @@
   "enter_username_email": "Enter your username or email",
   "for_sale": "For sale",
   "register_partner": "Register partner",
-  "become_shome_partner": "Become Saveloka partner",
+  "become_shome_partner": "Become Tobe House partner",
   "real_estate_type": "Real estate type",
   "general_information": "General Information",
   "estate_detail": "Estate detail",
