--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -43,7 +43,7 @@
   "im_flexible": "Saya fleksibel dengan tanggal",
   "hotel_residence": "Residensi Hotel",
   "seamless_living": "Hidup Tanpa Batas, Jadikan Hotel Tempat Tinggal Tetap Anda!",
-  "saveloka_recommended": "Unit yang Direkomendasikan oleh Saveloka",
+  "saveloka_recommended": "Unit yang Direkomendasikan oleh Tobe House",
   "stay_monthly": "Tinggal bulanan untuk harga lebih murah 🤑",
   "disc_upto": "Diskon hingga",
   "see_all": "Lihat semua",
@@ -51,8 +51,8 @@
   "find_best": "Temukan unit terbaik untuk staycation 🌴",
   "thematic_instagram": "Unit Tematis dan Instagramable!✨",
   "stay_with": "Tinggal dengan Suasana Baru!",
-  "saveloka_premium": "Saveloka Premium",
-  "selected_premium": "Unit premium terpilih dengan layanan bintang 5 oleh Saveloka",
+  "saveloka_premium": "Tobe House Premium",
+  "selected_premium": "Unit premium terpilih dengan layanan bintang 5 oleh Tobe House",
   "find_appartment": "Temukan apartemen yang sesuai dengan anggaran Anda! 💳",
   "price_below": "Harga di bawah adalah harga bulanan",
   "lowest": "Terendah",
@@ -66,7 +66,7 @@
   "best_selling": "Bangunan Apartemen Terlaris 🏆",
   "recommend_apartments": "Apartemen yang Direkomendasikan 🏬",
   "looking_for_a_place": "Mencari tempat tinggal? 🏠",
-  "find_by_saveloka": "Cari unit 'By Saveloka' di kota besar Indonesia",
+  "find_by_saveloka": "Cari unit 'By Tobe House' di kota besar Indonesia",
   "new": "BARU",
   "discussion": "Diskusi",
   "introduction": "Pengantar",
@@ -218,7 +218,7 @@
   "contact_info": "Informasi Kontak",
   "real_estate_images": "Gambar Properti",
   "update_image_to_maximum": "Perbarui gambar hingga maksimal dua gambar",
-  "do_you_agree": "Apakah Anda setuju dengan syarat dan kebijakan Saveloka?",
+  "do_you_agree": "Apakah Anda setuju dengan syarat dan kebijakan Tobe House?",
   "add_room": "Tambahkan ruangan",
   "room_title": "Judul ruangan",
   "enter_room_type": "Masukkan judul jenis kamar",
@@ -249,7 +249,7 @@
   "enter_username_email": "Masukkan nama pengguna atau email Anda",
   "for_sale": "Untuk dijual",
   "register_partner": "Daftar mitra",
-  "become_shome_partner": "Menjadi mitra Saveloka",
+  "become_shome_partner": "Menjadi mitra Tobe House",
   "real_estate_type": "Tipe properti",
   "general_information": "Informasi Umum",
   "estate_detail": "Detail Properti",
