--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -43,7 +43,7 @@
   "im_flexible": "Saya fleksibel dengan tarikh",
   "hotel_residence": "Kediaman Hotel",
   "seamless_living": "Hidup Tanpa Sempadan, Jadikan Hotel Tempat Tinggal Tetap Anda!",
-  "saveloka_recommended": "Unit yang dicadangkan oleh Saveloka",
+  "saveloka_recommended": "Unit yang dicadangkan oleh Tobe House",
   "stay_monthly": "Menetap secara bulanan untuk harga yang lebih murah 🤑",
   "disc_upto": "Diskaun hingga",
   "see_all": "Lihat semua",
@@ -51,8 +51,8 @@
   "find_best": "Cari unit terbaik untuk staycation 🌴",
   "thematic_instagram": "Unit Tematik dan Instagramable!✨",
   "stay_with": "Menetap dengan Atmosfera Baru!",
-  "saveloka_premium": "Saveloka premium",
-  "selected_premium": "Unit premium terpilih dengan perkhidmatan bintang 5 oleh Saveloka",
+  "saveloka_premium": "Tobe House premium",
+  "selected_premium": "Unit premium terpilih dengan perkhidmatan bintang 5 oleh Tobe House",
   "find_appartment": "Cari apartmen yang sesuai dengan bajet anda! 💳",
   "price_below": "Harga di bawah adalah harga bulanan",
   "lowest": "Terendah",
@@ -66,7 +66,7 @@
   "best_selling": "Bangunan apartmen terlaris 🏆",
   "recommend_apartments": "Apartmen yang Disyorkan 🏬",
   "looking_for_a_place": "Mencari tempat untuk tinggal? 🏠",
-  "find_by_saveloka": "Cari unit 'Dengan Saveloka' di bandar besar Indonesia",
+  "find_by_saveloka": "Cari unit 'Dengan Tobe House' di bandar besar Indonesia",
   "new": "BARU",
   "discussion": "Perbincangan",
   "introduction": "Pengenalan",
@@ -218,7 +218,7 @@
   "contact_info": "Maklumat hubungan",
   "real_estate_images": "Imej hartanah",
   "update_image_to_maximum": "Kemaskini imej maksimum dua imej",
-  "do_you_agree": "Adakah anda bersetuju dengan syarat dan polisi Saveloka?",
+  "do_you_agree": "Adakah anda bersetuju dengan syarat dan polisi Tobe House?",
   "add_room": "Tambah bilik",
   "room_title": "Tajuk bilik",
   "enter_room_type": "Masukkan tajuk jenis bilik",
@@ -249,7 +249,7 @@
   "enter_username_email": "Masukkan nama pengguna atau emel anda",
   "for_sale": "Untuk dijual",
   "register_partner": "Daftar rakan kongsi",
-  "become_shome_partner": "Menjadi rakan kongsi Saveloka",
+  "become_shome_partner": "Menjadi rakan kongsi Tobe House",
   "real_estate_type": "Jenis hartanah",
   "general_information": "Maklumat Am",
   "estate_detail": "Butiran Harta Tanah",
