--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -42,7 +42,7 @@
   "im_flexible": "Flexible ako sa mga petsa",
   "hotel_residence": "Hotel residence",
   "seamless_living": "Seamless Living, Gawin ang Hotel ang Iyong Permanenteng Tahanan!",
-  "saveloka_recommended": "Mga inirerekomenda ng Saveloka na mga yunit",
+  "saveloka_recommended": "Mga inirerekomenda ng Tobe House na mga yunit",
   "stay_monthly": "Mag-stay buwan-buwan para sa mas murang presyo 🤑",
   "disc_upto": "Diskuwento hanggang",
   "see_all": "Makita ang lahat",
@@ -50,8 +50,8 @@
   "find_best": "Hanapin ang pinakamahusay na mga yunit para sa staycation 🌴",
   "thematic_instagram": "Thematic at Instagramable Unit!✨",
   "stay_with": "Mag-stay kasama ang Bagong Atmospera!",
-  "saveloka_premium": "Saveloka premium",
-  "selected_premium": "Piniling premium na yunit na may 5-star na serbisyo mula sa Saveloka",
+  "saveloka_premium": "Tobe House premium",
+  "selected_premium": "Piniling premium na yunit na may 5-star na serbisyo mula sa Tobe House",
   "find_appartment": "Hanapin ang apartment na angkop sa iyong budget! 💳",
   "price_below": "Ang presyo sa ibaba ay buwanang presyo",
   "lowest": "Pinakamababa",
@@ -65,7 +65,7 @@
   "best_selling": "Pinakamabentang mga apartment buildings 🏆",
   "recommend_apartments": "Inirerekomendang Mga Apartment 🏬",
   "looking_for_a_place": "Naghahanap ng lugar na tirahan? 🏠",
-  "find_by_saveloka": "Hanapin ang mga yunit na By Saveloka sa mga malalaking lungsod sa Indonesia",
+  "find_by_saveloka": "Hanapin ang mga yunit na By Tobe House sa mga malalaking lungsod sa Indonesia",
   "new": "BAGO",
   "discussion": "Diskusyon",
   "introduction": "Introduksyon",
@@ -213,7 +213,7 @@
   "contact_info": "Impormasyon sa Pakikipag-ugnay",
   "real_estate_images": "Mga Larawan ng Real Estate",
   "update_image_to_maximum": "I-update ang mga larawan sa isang maximum na dalawang larawan",
-  "do_you_agree": "Sumasang-ayon ka ba sa mga tuntunin at patakaran ng Saveloka?",
+  "do_you_agree": "Sumasang-ayon ka ba sa mga tuntunin at patakaran ng Tobe House?",
   "add_room": "Magdagdag ng silid",
   "room_title": "Pamagat ng kuwarto",
   "enter_room_type": "Ilagay ang pamagat ng uri ng kwarto",
@@ -244,7 +244,7 @@
   "enter_username_email": "Ipasok ang iyong username o email",
   "for_sale": "Para sa benta",
   "register_partner": "Magparehistro ng kasosyo",
-  "become_shome_partner": "Maging kasosyo sa Saveloka",
+  "become_shome_partner": "Maging kasosyo sa Tobe House",
   "real_estate_type": "Uri ng real estate",
   "general_information": "Pangkalahatang Impormasyon",
   "estate_detail": "Detalye ng Estate",
