--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -44,7 +44,7 @@
   "im_flexible": "Tôi linh hoạt với ngày",
   "hotel_residence": "Khu chỗ ở như khách sạn",
   "seamless_living": "Cuộc sống mượt mà, Hãy biến khách sạn thành ngôi nhà cố định của bạn!",
-  "saveloka_recommended": "Đơn vị được Saveloka khuyến nghị",
+  "saveloka_recommended": "Đơn vị được Tobe House khuyến nghị",
   "stay_monthly": "Ở hàng tháng để có giá rẻ hơn 🤑",
   "disc_upto": "Giảm giá lên đến",
   "see_all": "Xem tất cả",
@@ -52,8 +52,8 @@
   "find_best": "Tìm các đơn vị tốt nhất cho kỳ nghỉ 🌴",
   "thematic_instagram": "Đơn vị chủ đề và Instagramable!✨",
   "stay_with": "Ở với bầu không khí mới!",
-  "saveloka_premium": "Saveloka cao cấp",
-  "selected_premium": "Đơn vị cao cấp được chọn với dịch vụ 5 sao của Saveloka",
+  "saveloka_premium": "Tobe House cao cấp",
+  "selected_premium": "Đơn vị cao cấp được chọn với dịch vụ 5 sao của Tobe House",
   "find_appartment": "Tìm căn hộ phù hợp với ngân sách của bạn! 💳",
   "price_below": "Giá dưới đây là giá hàng tháng",
   "lowest": "Thấp nhất",
@@ -67,7 +67,7 @@
   "best_selling": "Các tòa nhà chung cư bán chạy nhất 🏆",
   "recommend_apartments": "Căn hộ được đề xuất 🏬",
   "looking_for_a_place": "Đang tìm nơi ở? 🏠",
-  "find_by_saveloka": "Tìm đơn vị 'Theo Saveloka' ở các thành phố lớn của Indonesia",
+  "find_by_saveloka": "Tìm đơn vị 'Theo Tobe House' ở các thành phố lớn của Indonesia",
   "new": "MỚI",
   "discussion": "Thảo luận",
   "introduction": "Giới thiệu",
@@ -219,7 +219,7 @@
   "contact_info": "Thông tin liên hệ",
   "real_estate_images": "Ảnh bất động sản",
   "update_image_to_maximum": "Cập nhật hình ảnh tối đa hai ảnh",
-  "do_you_agree": "Bạn đồng ý với điều khoản và chính sách của Saveloka?",
+  "do_you_agree": "Bạn đồng ý với điều khoản và chính sách của Tobe House?",
   "add_room": "Thêm phòng",
   "room_title": "Tiêu đề phòng",
   "enter_room_type": "Nhập tiêu đề loại phòng",
@@ -249,7 +249,7 @@
   "enter_username_email": "Nhập tên người dùng hoặc email của bạn",
   "for_sale": "Đang bán",
   "register_partner": "Đăng ký đối tác",
-  "become_shome_partner": "Trở thành đối tác Saveloka",
+  "become_shome_partner": "Trở thành đối tác Tobe House",
   "real_estate_type": "Loại bất động sản",
   "general_information": "Thông Tin Tổng Quan",
   "estate_detail": "Chi Tiết Bất Động Sản",
