--- a/src/languages/cn.json
+++ b/src/languages/cn.json
@@ -26,9 +26,9 @@
   "find_accommodation": "找住宿...",
   "Find_Accommodation": "找住宿",
   "we_are_always_here": "我们随时为您提供支持",
-  "rent": "租",
-  "buy": "买",
-  "tour": "游览",
+  "RENT": "租",
+  "BUY": "买",
+  "TOUR": "游览",
   "tour_post": "旅游",
   "daily": "日租",
   "monthly": "月租",
