--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -999,5 +999,15 @@
   "read_less": "Baca kurang",
   "read_more": "Baca lebih",
   "check_it_out": "Periksa ini!",
-  "view_ticket": "Lihat tiket pelancongan"
+  "view_ticket": "Lihat tiket pelancongan",
+  "there_are_real_estate": "Ini adalah hartanah yang anda baru sahaja lihat",
+  "feature_estate": "Estet Pilihan",
+  "explore_popular_estate": "Terokai hartanah popular",
+  "request_to_book_tour": "Meminta untuk menempah lawatan",
+  "detail_tour_ticket": "Butiran tiket lawatan",
+  "voucher_valid": "Sah laku voucher",
+  "policy": "dasar",
+  "payment_method": "Kaedah pembayaran",
+  "no_properties_found": "Tiada hartanah dijumpai",
+  "please_filter_again": "Sila tapis semula"
 }
