--- a/src/languages/th.json
+++ b/src/languages/th.json
@@ -1022,5 +1022,15 @@
   "each_time_post": "ทุกครั้งที่โพสต์ใหม่ ระบบจะหักค่าธรรมเนียมการโพสต์ที่นั่นอีกครั้ง",
   "start_day": "วันเริ่มต้น",
   "end_of_day": "สิ้นสุดวัน",
-  "view_ticket": "ดูตั๋วทัวร์"
+  "view_ticket": "ดูตั๋วทัวร์",
+  "there_are_real_estate": "นี่คืออสังหาริมทรัพย์ที่คุณเพิ่งดูเมื่อเร็วๆ นี้",
+  "feature_estate": "อสังหาริมทรัพย์ที่โดดเด่น",
+  "explore_popular_estate": "สำรวจอสังหาริมทรัพย์ยอดนิยม",
+  "request_to_book_tour": "ขอจองทัวร์",
+  "detail_tour_ticket": "รายละเอียดตั๋วทัวร์",
+  "voucher_valid": "ความถูกต้องของบัตรกำนัล",
+  "policy": "นโยบาย",
+  "payment_method": "วิธีการชำระเงิน",
+  "no_properties_found": "ไม่พบอสังหาริมทรัพย์",
+  "please_filter_again": "กรุณากรองอีกครั้ง"
 }
