--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -272,7 +272,7 @@
   "tour_time": "Thời gian tour",
   "day_time": "Thời gian ban ngày",
   "night_time": "Thời gian ban đêm",
-  "night": "Buổi tối",
+  "night": "Đêm",
   "maximum_seat": "Số ghế tối đa",
   "starting_gate": "Cổng khởi hành",
   "destination": "Điểm đến",
