--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -760,7 +760,7 @@
   "active_booking": "Active Booking",
   "booking_history": "Booking History",
   "booking_detail": "Booking detail",
-  "guest": "guest",
+  "guest": "Guest",
   "free_wifi": "Free wifi",
   "special_request": "Special requests",
   "guest_name": "Guest name",
