--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -752,7 +752,7 @@
   "active_booking": "Pemesanan Aktif",
   "booking_history": "Riwayat Pemesanan",
   "booking_detail": "Detail pemesanan",
-  "guest": "tamu",
+  "guest": "Tamu",
   "free_wifi": "Wi-Fi gratis",
   "special_request": "Permintaan khusus",
   "guest_name": "Nama tamu",
