--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -756,7 +756,7 @@
   "active_booking": "Tempahan Aktif",
   "booking_history": "Sejarah Tempahan",
   "booking_detail": "Butiran tempahan",
-  "guest": "tetamu",
+  "guest": "Tetamu",
   "free_wifi": "Wi-Fi percuma",
   "special_request": "Permintaan khas",
   "guest_name": "Nama tetamu",
