--- a/src/languages/ph.json
+++ b/src/languages/ph.json
@@ -751,7 +751,7 @@
   "active_booking": "Aktibong Pag-book",
   "booking_history": "Kasaysayan ng Pag-book",
   "booking_detail": "Detalye ng pag-book",
-  "guest": "bisita",
+  "guest": "Bisita",
   "free_wifi": "Libreng wifi",
   "special_request": "Espesyal na kahilingan",
   "guest_name": "Pangalan ng bisita",
