--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -756,7 +756,7 @@
   "active_booking": "Đặt phòng đang hoạt động",
   "booking_history": "Lịch sử đặt phòng",
   "booking_detail": "Chi tiết đặt phòng",
-  "guest": "khách",
+  "guest": "Khách",
   "free_wifi": "Wifi miễn phí",
   "special_request": "Yêu cầu đặc biệt",
   "guest_name": "Tên khách",
