--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -1018,5 +1018,12 @@
   "please_choose_coordinates": "Sila pilih koordinat harta anda di Peta!",
   "what_are_property": "Apakah waktu daftar masuk/daftar keluar hartanah?",
   "the_area_of_property": "Keluasan hartanah anda?",
-  "please_enter_correct": "Sila masukkan maklumat yang betul"
+  "please_enter_correct": "Sila masukkan maklumat yang betul",
+  "over": "Tamat",
+  "enter_referral": "Masukkan Kod Rujukan Anda",
+  "create_an_account": "Buat akaun",
+  "connect_with_your_friend": "Sambung dengan rakan-rakan anda hari ini!",
+  "enter_business_name": "Masukkan nama perniagaan",
+  "enter_business_category": "Masukkan kategori perniagaan",
+  "detail_room": "Butiran bilik"
 }
