--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1058,5 +1058,34 @@
   "detail_room": "Detail room",
 
   "show_more": "Show more",
-  "show_less": "Show less"
+  "show_less": "Show less",
+  "verified": "Verified",
+  "personal_profile": "Personal profile",
+  "balance_fee_gas": "Balance fee gas",
+  "export_wallet": "Export wallet",
+  "delete_wallet": "Delete wallet",
+  "account_card_management": "Account/Card Management",
+  "active_to_use_TBH": "Activate to use TBH.",
+  "direct_payment": "Direct Payment",
+  "active_now": "Active now",
+  "open_now": "Open now",
+  "tbh_wallet_management": "TBH Wallet Management",
+  "join_not_to_receive_voucher": "Join now to earn points and receive discount vouchers for your next transaction!",
+  "create_new_wallet": "Create New Wallet",
+  "copy_success": "Copied Successfully",
+  "add_voucher": "Add voucher",
+  "date_start": "Date start",
+  "date_end": "Date end",
+  "list_price": "Listed price",
+  "discount_price": "Discount price",
+  "voucher_images": "Voucher images",
+  "minimum_one_photos": "Update up to 1 image",
+  "link_policy_to_room": "Link policy to room",
+  "select_at_least_one_policy": "Select at least one policy to continue",
+  "invalid_date": "invalid date (from 1 to 30 days)",
+  "this_rate_is_cheaper": "This rate is cheaper than the listed price",
+  "this_rate_is_expensive": "This rate is more expensive than the listed price",
+  "listed_price_room": "Listed price of this room",
+  "price_after_policy": "Price after applying the policy",
+  "cancel_link_policy": "Cancel link policy"
 }
